[gd_scene load_steps=17 format=3 uid="uid://b6or7sluan31c"]

[ext_resource type="Script" path="res://Scenes/Game/Player.gd" id="1_e1tbc"]
[ext_resource type="Script" path="res://Scenes/Game/Game.gd" id="1_qop40"]
[ext_resource type="Script" path="res://Scenes/Game/Camera3D.gd" id="2_2y024"]
[ext_resource type="PackedScene" uid="uid://ds27xo3cblttw" path="res://Scenes/Game/Items/Shield/Shield.tscn" id="3_ia310"]
[ext_resource type="PackedScene" uid="uid://uhpr6hmvagxc" path="res://Scenes/Game/Items/Sword/Sword.tscn" id="4_qmp51"]
[ext_resource type="PackedScene" uid="uid://cjwiy8t0nxs3e" path="res://Scenes/Game/Enemies/ShooterDie/ShooterDie.tscn" id="8_6crlg"]
[ext_resource type="PackedScene" uid="uid://cjy0oqb71jfg2" path="res://Scenes/Game/Enemies/ZombieDie/ZombieDie.tscn" id="8_85blo"]
[ext_resource type="PackedScene" uid="uid://bpcymf0run3gy" path="res://Scenes/Game/UI/Equipment/Equipment.tscn" id="9_1onw8"]
[ext_resource type="Theme" uid="uid://c1tb4jaj3o8ai" path="res://Theme.tres" id="10_gpy6t"]
[ext_resource type="Script" path="res://Scenes/Game/UIViewport.gd" id="10_m3rhi"]
[ext_resource type="Script" path="res://Scenes/Game/UI/HPBar.gd" id="10_vbrhh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dj0h4"]
albedo_color = Color(0.890196, 1, 0.890196, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_l0kuj"]
albedo_color = Color(1, 0.482353, 0.505882, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_s053r"]

[sub_resource type="BoxShape3D" id="BoxShape3D_uuubb"]

[sub_resource type="Environment" id="Environment_u4c4i"]
glow_normalized = true
glow_intensity = 0.62
glow_strength = 1.33
glow_blend_mode = 0

[node name="Game" type="Node3D"]
script = ExtResource("1_qop40")

[node name="World" type="Node3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="World"]
use_collision = true
size = Vector3(500, 1, 500)
material = SubResource("StandardMaterial3D_dj0h4")

[node name="CSGBox3D2" type="CSGBox3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -25)
use_collision = true
size = Vector3(29, 1, 29)

[node name="PlayerHolder" type="Node3D" parent="."]

[node name="Player" type="RigidDynamicBody3D" parent="PlayerHolder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.255, 0)
script = ExtResource("1_e1tbc")

[node name="CSGBox3D" type="CSGBox3D" parent="PlayerHolder/Player"]
material_override = SubResource("StandardMaterial3D_l0kuj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerHolder/Player"]
shape = SubResource("BoxShape3D_s053r")

[node name="BulletCollectArea" type="Area3D" parent="PlayerHolder/Player"]
collision_layer = 0
collision_mask = 1073741824

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerHolder/Player/BulletCollectArea"]
transform = Transform3D(1.04943, 0, 0, 0, 1.04943, 0, 0, 0, 1.04943, 0, 0, 0)
shape = SubResource("BoxShape3D_uuubb")

[node name="Sides" type="Node3D" parent="PlayerHolder/Player"]

[node name="One" type="Position3D" parent="PlayerHolder/Player/Sides"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Three" type="Position3D" parent="PlayerHolder/Player/Sides"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.5, 0, 0)

[node name="Sword" parent="PlayerHolder/Player/Sides/Three" instance=ExtResource("4_qmp51")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)

[node name="Four" type="Position3D" parent="PlayerHolder/Player/Sides"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.5, 0, 0)

[node name="Shield" parent="PlayerHolder/Player/Sides/Four" instance=ExtResource("3_ia310")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0.343178, 0)

[node name="Five" type="Position3D" parent="PlayerHolder/Player/Sides"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.5)

[node name="Two" type="Position3D" parent="PlayerHolder/Player/Sides"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.5)

[node name="Six" type="Position3D" parent="PlayerHolder/Player/Sides"]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="Camera3D" type="Camera3D" parent="PlayerHolder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 6.255, 0)
current = true
script = ExtResource("2_2y024")

[node name="Enemies" type="Node3D" parent="."]

[node name="ZombieDie" parent="Enemies" instance=ExtResource("8_85blo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.5807, 1.54155, 0)

[node name="ZombieDie2" parent="Enemies" instance=ExtResource("8_85blo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.17624, 1.54155, 8.21433)

[node name="ZombieDie3" parent="Enemies" instance=ExtResource("8_85blo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.7508, 1.54155, 1.2813)

[node name="ZombieDie4" parent="Enemies" instance=ExtResource("8_85blo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.08718, 1.54155, 4.14884)

[node name="ZombieDie5" parent="Enemies" instance=ExtResource("8_85blo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.97025, 2.95127, -14.4781)

[node name="ZombieDie6" parent="Enemies" instance=ExtResource("8_85blo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.34825, 2.95127, -14.4698)

[node name="ShooterDie" parent="Enemies" instance=ExtResource("8_6crlg")]

[node name="ShooterDie2" parent="Enemies" instance=ExtResource("8_6crlg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.6027, 1.54155, 6.32814)

[node name="ShooterDie3" parent="Enemies" instance=ExtResource("8_6crlg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.669722, 3.21339, -12.4749)

[node name="ShooterDie4" parent="Enemies" instance=ExtResource("8_6crlg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.03803, 3.21339, -25.8183)

[node name="ShooterDie5" parent="Enemies" instance=ExtResource("8_6crlg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.7607, 3.21339, 0.137355)

[node name="ShooterDie6" parent="Enemies" instance=ExtResource("8_6crlg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.7607, 1.74465, 0.137355)

[node name="UIViewport" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("10_m3rhi")

[node name="Equipment" parent="UIViewport" instance=ExtResource("9_1onw8")]
visible = false

[node name="HPBar" type="ProgressBar" parent="UIViewport"]
custom_minimum_size = Vector2(50, 0)
offset_right = 401.0
offset_bottom = 27.0
theme = ExtResource("10_gpy6t")
max_value = 10.0
step = 1.0
script = ExtResource("10_vbrhh")

[node name="Label" type="Label" parent="UIViewport/HPBar"]
offset_right = 40.0
offset_bottom = 23.0
theme = ExtResource("10_gpy6t")
text = "HP"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_u4c4i")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.336879, -0.817484, 0.467154, 0.132168, 0.5323, 0.836175, -0.932226, -0.219947, 0.287365, 2.32451, 3.79325, 0)
light_bake_mode = 0
shadow_enabled = true
directional_shadow_split_1 = 0.037
directional_shadow_split_2 = 0.1
directional_shadow_split_3 = 0.162
directional_shadow_max_distance = 13.2
